--- a/src/main/resources/assets/appliedenergistics2/lang/zh_cn.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/zh_cn.lang
@@ -266,8 +266,8 @@ gui.appliedenergistics2.ResultLock=等待样板输出解锁
 gui.appliedenergistics2.UntilPulseUnlock=等待红石脉冲解锁
 gui.appliedenergistics2.CanBeEnchanted=可被附魔
 gui.appliedenergistics2.IncreasedEnergyUseFromEnchants=附魔会增加能耗
-gui.appliedenergistics2.Steps=轮数
-gui.appliedenergistics2.Used=已使用
+gui.appliedenergistics2.PatternExecutionCount=轮数
+gui.appliedenergistics2.MaterialUsagePercentage=已使用
 gui.appliedenergistics2.Deprecated=已弃用
 
 // GUI Tooltips
