--- a/src/main/resources/assets/appliedenergistics2/lang/zh_cn.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/zh_cn.lang
@@ -267,7 +267,7 @@ gui.appliedenergistics2.UntilPulseUnlock=等待红石脉冲解锁
 gui.appliedenergistics2.CanBeEnchanted=可被附魔
 gui.appliedenergistics2.IncreasedEnergyUseFromEnchants=附魔会增加能耗
 gui.appliedenergistics2.PatternExecutionCount=轮数
-gui.appliedenergistics2.MaterialUsagePercentage=已使用
+gui.appliedenergistics2.MaterialUsagePercentage=使用率
 gui.appliedenergistics2.Deprecated=已弃用
 
 // GUI Tooltips
